Fixed HomeIndex page wheel issue by renaming the div

--- a/DesignUrFixie/Views/Home/Index.cshtml
+++ b/DesignUrFixie/Views/Home/Index.cshtml
@@ -42,7 +42,7 @@
         </div>
     </div>
     <div class="col-sm-3">
-        <div id="WheelsColour">
+        <div id="WheelColour">
             <p><b>WHEELS</b> Colour</p>
             <p>
                 <input type='button' class="button BF" onclick="setWheels('Black')">
